--- a/resources/css/filament/dashboard/theme.css
+++ b/resources/css/filament/dashboard/theme.css
@@ -29,3 +29,39 @@
         @apply bg-indigo-400;
     }
 } 
+
+.fi-dropdown-panel{
+
+}
+
+.fi-user-menu {
+    width: 300px !important;
+}
+
+.fi-user-menu-items {
+    padding: 0.5rem !important;
+}
+
+.fi-user-menu-item {
+    padding: 0.75rem !important;
+    font-size: 0.875rem !important;
+}
+
+.fi-user-menu-header {
+    padding: 1rem !important;
+}
+
+.fi-user-menu-avatar {
+    width: 2.5rem !important;
+    height: 2.5rem !important;
+}
+
+.fi-user-menu-name {
+    font-size: 1rem !important;
+    font-weight: 600 !important;
+}
+
+.fi-user-menu-email {
+    font-size: 0.875rem !important;
+    color: rgb(156 163 175) !important;
+}
